# OcctSurfacer

./: CMakeLists.txt  Models.cpp  Models.hpp  Relation.cpp  Relation.hpp  main.cpp
models/: 10.FCStd  10.brep  11.FCStd  12.FCStd  12.brep  13.FCStd  14.FCStd  14.brep  15.FCStd  15.brep  16.FCStd  17.FCStd  17.brep  8.FCStd  9.FCStd  B.brep  C.brep  alien.FCStd  alien1.brep  compare.FCStd  conflict.brep  cylinder.FCStd
